# ASSA

./: .env.example  .gitignore  AGENTS.md  PROJECT_DOCUMENTATION.md  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml
data/: feedback_migration_state.json  sent_alerts.json
data/history/: 2026-06-04_summaries.json
data/processed/: 2026-06-04_alerts.csv  2026-06-04_alerts.json  2026-06-04_apps.csv  2026-06-04_apps.json  2026-06-04_candidates.csv  2026-06-04_clusters.csv  2026-06-04_near_misses.csv  2026-06-04_near_misses.json  2026-06-04_rejected.csv  2026-06-04_rejected.json  2026-06-04_summaries.csv  2026-06-04_summaries.json  2026-06-04_watch.csv  2026-06-04_watch.json  2026-06-05_alert_funnel.json  2026-06-05_alerts.csv  2026-06-05_alerts.json  2026-06-05_candidates.csv  2026-06-05_clusters.csv  2026-06-05_near_misses.csv  2026-06-05_near_misses.json  2026-06-05_rejected.csv  2026-06-05_rejected.json  2026-06-05_sendable_alerts.csv  (+117 more)
tests/: test_aggregator.py  test_alert_dedupe.py  test_alert_filter.py  test_alert_funnel.py  test_alert_ranker.py  test_appstorespy_client.py  test_candidate_generator.py  test_classifier.py  test_cleaner.py  test_collector.py  test_coverage.py  test_data_quality.py  test_feedback.py  test_feedback_migration.py  test_feedback_migration_cli.py  test_first_run_behavior.py  test_llm_input.py  test_llm_report.py  test_market_signal_dedupe.py  test_report_writer.py  test_scorer.py  test_sendable_alert_filter.py  test_telegram_notify.py  test_trend_detector.py  test_weekly_digest.py  test_workflow.py
(+130 files in other folders)
