[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appstorespy-niche-monitor"
version = "0.1.0"
description = "Automated AppStoreSpy niche monitor for mobile games."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "PyYAML>=6.0"]

[project.scripts]
appstorespy-monitor = "appstorespy_niche_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
